syntax = "proto2";

package raft;
import "kvs.proto";

message Entry {
  required kvs.client_msg msg = 2;
}

message AppendEntriesRequest {
  required uint64 term = 1;
  required uint64 leaderID = 2;
  required uint64 prevLogIndex = 3;
  required int64 prevLogTerm = 4;
  repeated Entry entries = 5;
  required uint64 leaderCommit = 6;
}

message AppendEntriesReply {
  required uint64 term = 1;
  required bool success = 2;
}

message RequestVoteRequest {
  required uint64 term = 1;
  required uint64 candidateID = 2;
  required uint64 lastLogIndex = 3;
  required uint64 lastLogTerm = 4;
}

message RequestVoteReply {
  required uint64 term = 1;
  required bool voteGranted = 2;
}

